[gd_scene load_steps=8 format=3 uid="uid://bk78dyrnv1j83"]

[ext_resource type="Script" path="res://Player/player_level1.gd" id="1_avowl"]
[ext_resource type="Texture2D" uid="uid://c2culpuno6vvm" path="res://Asset/square_new.png" id="2_4q6fr"]
[ext_resource type="Texture2D" uid="uid://c4840w5t1luq7" path="res://Asset/help-sign.png" id="3_8yjjp"]
[ext_resource type="Texture2D" uid="uid://7rux2j2bvag" path="res://Asset/triangle.png" id="3_qurlx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7hhwf"]
size = Vector2(83, 83)

[sub_resource type="CircleShape2D" id="CircleShape2D_iprle"]
radius = 78.9177

[sub_resource type="SystemFont" id="SystemFont_ojmw5"]

[node name="PlayerLevel1" type="RigidBody2D"]
script = ExtResource("1_avowl")

[node name="Square" type="Sprite2D" parent="."]
texture = ExtResource("2_4q6fr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_7hhwf")

[node name="HelpZone" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="HelpZone"]
shape = SubResource("CircleShape2D_iprle")

[node name="Hint" type="Sprite2D" parent="."]
z_index = 15
z_as_relative = false
scale = Vector2(1e-05, 1e-05)

[node name="Label" type="Label" parent="Hint"]
visible = false
offset_left = -112.0
offset_top = -89.0
offset_right = 132.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0.694118, 0.494118, 0.192157, 1)
theme_override_fonts/font = SubResource("SystemFont_ojmw5")
theme_override_font_sizes/font_size = 24
text = "Do you want to help?
Yes (F)                No (P)

"

[node name="Background" type="Sprite2D" parent="Hint"]
position = Vector2(1, -250)
texture = ExtResource("3_8yjjp")

[node name="ColorRect" type="ColorRect" parent="Hint/Background"]
visible = false
z_index = -1
offset_left = -122.0
offset_top = -92.0
offset_right = 143.0
offset_bottom = -12.0
color = Color(0, 0, 0, 0.439216)

[node name="Indicator" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 10
position = Vector2(2.38419e-07, -79)
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_qurlx")

[connection signal="body_entered" from="HelpZone" to="." method="_on_help_zone_body_entered"]
[connection signal="body_exited" from="HelpZone" to="." method="_on_help_zone_body_exited"]
